--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
 {% load static %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 
 
 
@@ -35,7 +35,7 @@
 
                     </h1>
                     <p>We’re in Business to Improve Lives</p>
-                    <a href="products" class="btn">Explore Now &#8594;
+                    <a href="" class="btn">Explore Now &#8594;
                     </a>
 
                 </div>
