fixed some bugs

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
 
                     </h1>
                     <p>We’re in Business to Improve Lives</p>
-                    <a href="" class="btn">Explore Now &#8594;
+                    <a href="products" class="btn">Explore Now &#8594;
                     </a>
 
                 </div>
@@ -84,7 +84,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
 
             <div class="col-4">
@@ -95,7 +95,7 @@
 
                 </div>
 
-                <p>Rs.70.00</p>
+                <p>₹70.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -105,7 +105,7 @@
 
                 </div>
 
-                <p>Rs.40.00</p>
+                <p>₹40.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -115,7 +115,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
 
         </div>
@@ -133,7 +133,7 @@
 
                 </div>
 
-                <p>Rs.70.00</p>
+                <p>₹70.00</p>
             </div>
 
             <div class="col-4">
@@ -144,7 +144,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -154,7 +154,7 @@
 
                 </div>
 
-                <p>Rs.30.00</p>
+                <p>₹30.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -164,7 +164,7 @@
 
                 </div>
 
-                <p>Rs.150.00</p>
+                <p>₹150.00</p>
             </div>
 
         </div>
@@ -178,7 +178,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
 
             <div class="col-4">
@@ -189,7 +189,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -199,7 +199,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
             <div class="col-4">
                 {% load static %}
@@ -209,7 +209,7 @@
 
                 </div>
 
-                <p>Rs.50.00</p>
+                <p>₹50.00</p>
             </div>
 
         </div>
