added sorting feature

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,8 +19,9 @@
                     </ul>
 
                 </nav>
+                
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/cart.png" %}" width="30px" height="30px" >
+                <a href="./cart"><img src="{% static "RedStore_Img/images/cart.png" %}" width="30px" height="30px" ></a>
                 {% load static %}
                 <img src="{% static "RedStore_Img/images/menu.png" %}" class="menu-icon" onclick="menutoggle()">
 
