added product details pages

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
                 </nav>
                 
                 {% load static %}
-                <a href="./cart"><img src="{% static "RedStore_Img/images/cart.png" %}" width="30px" height="30px" ></a>
+                <a href="/cart"><img src="{% static "RedStore_Img/images/cart.png" %}" width="30px" height="30px" ></a>
                 {% load static %}
                 <img src="{% static "RedStore_Img/images/menu.png" %}" class="menu-icon" onclick="menutoggle()">
 
