--- a/static/STYLE.CSS
+++ b/static/STYLE.CSS
@@ -2,12 +2,15 @@
 padding: 0;
 box-sizing: border-box;}
 
-body{font-family: 'Poppins', sans-serif;
-    }
+body {
+    font-family: 'Poppins', sans-serif;
+ }
 
-.navbar{display: flex;
-padding: 20px;
-align-items: center;}
+.navbar {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+}
 
 nav{
     text-align: right;
