--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,13 +7,13 @@
                     <ul id="MenuItems">
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About</a></li>
-                        <li><a href="/contacts">Contacts</a></li>
+                        <li><a href="/contact">Contact</a></li>
                         <li><a href="/products">Products</a></li>
-                        {% if uname != 'Login/Sign Up' %}
+                        {% if uname != '' %}
                         <li><a href="/account">{{ uname }}</a></li>
                         <li><form action="/logout"><button type="submit">Log Out</button>
                         {% else %}
-                        <li><a href="/auth">{{ uname }}</a></li>
+                        <li><a href="/auth">Login/Sign Up</a></li>
                         {% endif %}
                         </form></li>
                     </ul>
